Fix scrollbar bug on Firefox.

--- a/src/app.css
+++ b/src/app.css
@@ -75,6 +75,10 @@ input {
   box-sizing: border-box;
 }
 
+html {
+  scrollbar-width: none;
+}
+
 body {
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: none;  
